# raytracer

./: CMakeLists.txt  README.md  image.cpp  image.h  image.hpp  kdtree.cpp  kdtree.hpp  light.hpp  main.cpp  matrix.hpp  objModel.cpp  objModel.hpp  objects.cpp  objects.hpp  objectsSupport.cpp  objectsSupport.hpp  render.cpp  render.hpp  scene.cpp  scene.hpp  util.cpp  util.h  util.hpp  vec.h  vec.hpp
input/: env.mtl
src/: camera.hpp  image.cpp  image.hpp  kdtree.cpp  light.hpp  main.cpp  objModel.cpp  objModel.hpp  objects.cpp  objects.hpp  objectsSupport.hpp  render.cpp  render.hpp  scene.cpp  scene.hpp
src/objects/: flatTriangle.cpp  flatTriangle.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/parser/: mtlParser.cpp  objModel.cpp  objModel.hpp  parserUtil.cpp
src/scene/: camera.cpp  camera.hpp  environment.cpp  environment.hpp  light.hpp
src/util/: matrix.hpp  util.cpp  util.hpp  vec.hpp
